--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ django-phonenumber-field==8.1.0
 django-ratelimit==4.1.0
 
 pytz==2025.2
+
+dj-database-url==2.3.0
+
+google-cloud-storage==3.1.0
+
+python-dotenv==1.1.0
