successfully installed wagtail! updated requirements and env dev to add fields, needs configuring and testing

--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,9 @@
 DJANGO_DEBUG=True
 DJANGO_ENV=development
 PYTHON_VERSION=3.10
-DOMAIN=""
+DOMAIN="https://your-domain.com" # domain name for production
+WAGTAIL_URL="https://your-domain.com/cms" # Wagtail CMS URL for backend admin panel
+
 
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,[::1]
 ALLOWED_CORS="*"
