added cursor dir to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ encoded.txt
 .venv/
 *venv/
 *node_modules/
+.cursor/
 
 # Created by https://www.toptal.com/developers/gitignore/api/django,python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,python,visualstudiocode
